# jiheisho

./: .gitignore  Taskfile.yaml  docker-compose.yaml  hello.py  pyproject.toml
.github/workflows/: base.yaml
frontend/: .dockerignore  .gitattributes  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/classify/: route.ts
frontend/src/app/classify/: actions.ts  page.tsx
notebooks/: main.ipynb  polish_data.ipynb
server/: .dockerignore  Dockerfile  main.py  pyproject.toml  request.py
