[project]
name = "jiheisho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<= 3.12"
dependencies = [
    "keras>=3.8.0",
    "polars>=1.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.uv.workspace]
members = ["server"]
